dashboard/clinical-test-output.txt

> minipacs-dashboard@1.0.0 test:clinical-governance
> ts-node lib/clinical-governance/__tests__/peer-review-service.test.ts && ts-node lib/clinical-governance/__tests__/capa-service.test.ts

c:\Antigravity\Minipacs-v.2\dashboard\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
lib/clinical-governance/peer-review-service.ts(41,16): error TS2353: Object literal may only specify known properties, and 'samplingKey' does not exist in type 'PeerReviewWhereUniqueInput'.
lib/clinical-governance/peer-review-service.ts(43,9): error TS2353: Object literal may only specify known properties, and 'programVersion' does not exist in type '(Without<PeerReviewCreateInput, PeerReviewUncheckedCreateInput> & PeerReviewUncheckedCreateInput) | (Without<...> & PeerReviewCreateInput)'.

    at createTSError (c:\Antigravity\Minipacs-v.2\dashboard\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (c:\Antigravity\Minipacs-v.2\dashboard\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (c:\Antigravity\Minipacs-v.2\dashboard\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (c:\Antigravity\Minipacs-v.2\dashboard\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (c:\Antigravity\Minipacs-v.2\dashboard\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1943:10
    at Object.require.extensions.<computed> [as .ts] (c:\Antigravity\Minipacs-v.2\dashboard\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1533:32)
    at Module._load (node:internal/modules/cjs/loader:1335:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19) {
  diagnosticCodes: [ 2353, 2353 ]
}
EXIT_CODE:0 
